fix: rules & tutorial button not showing by default

--- a/client/src/scss/utils/buttons.scss
+++ b/client/src/scss/utils/buttons.scss
@@ -142,7 +142,7 @@
 
 .rules-close-btn {
     position: absolute;
-    transform: translate(135px, 4px);
+    transform: translate(125px, 6px);
     width: 25px;
     height: 25px;
     z-index: 10;
